# DocuGen-Ai

./: API_KEY_SETUP.md  DEPLOYMENT.md  README.md
docugen-backend/: .env.example  Dockerfile  pyproject.toml
docugen-backend/app/: main.py  pil_compat.py
docugen-backend/app/services/: social_media.py  video_generator.py
docugen-frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
docugen-frontend/src/: App.tsx
